--- a/Server/Views/screenHome.hbs
+++ b/Server/Views/screenHome.hbs
@@ -199,6 +199,18 @@
                                                     <div>
                                                         {{this.name_Product}}
                                                     </div>
+                                                    <div>
+                                                        {{this.img_product}}
+                                                    </div>
+                                                    <div>
+                                                        {{this.name_Size}}
+                                                    </div>
+                                                    <div>
+                                                        {{this.quantityProduct}}
+                                                    </div>
+                                                    <div>
+                                                        {{this.name_Price}}
+                                                    </div>
                                                 {{/each}}
 
                                                 Tổng tiền: {{formatCurrency this.total_All}}
