--- a/Server/Views/screenHome.hbs
+++ b/Server/Views/screenHome.hbs
@@ -116,19 +116,19 @@
 
                 <div style=" display: flex; line-height: 48px;  margin: 0 14px; justify-content: space-between;">
                     <div>
-                        <button class="btn-cf default-selected" style=" padding: 0 8px;" onclick="openOrder('confirm')">
+                        <button class="btn-cf default-selected" style=" padding: 0 8px;" onclick="openOrder('choXacNhan')">
                             Chờ xác nhận
                         </button>
-                        <button class="btn-cf" style=" padding: 0 8px;" onclick="openOrder('pickup')">Đang chuẩn bị hàng
+                        <button class="btn-cf" style=" padding: 0 8px;" onclick="openOrder('choLayHang')">Chờ lấy hàng
                         </button>
-                        <button class="btn-cf" style=" padding: 0 8px;" onclick="openOrder('delivered')">Đang giao
+                        <button class="btn-cf" style=" padding: 0 8px;" onclick="openOrder('choGiaoHang')">Chờ giao hàng
                         </button>
-                        <button class="btn-cf" style=" padding: 0 8px;" onclick="openOrder('returns')">Yêu cầu hủy đơn
+                        <button class="btn-cf" style=" padding: 0 8px;" onclick="openOrder('daGiao')">Đã giao 
                         </button>
                     </div>
                     <div>
-                        <button class="btn-cf" style=" padding: 0 8px;" onclick="openOrder('delivery')">Đã nhận</button>
-                        <button class="btn-cf" style=" padding: 0 8px;" onclick="openOrder('history')">Đã hủy</button>
+                        <button class="btn-cf" style=" padding: 0 8px;" onclick="openOrder('daHuy')">Đã hủy</button>
+                        <button class="btn-cf" style=" padding: 0 8px;" onclick="openOrder('traHang')">Trả hàng</button>
                     </div>
                 </div>
                 <div style="margin: 8px;color: #0008ff;display: flex;">
@@ -141,7 +141,7 @@
                       border-radius: 8px;
                       padding: 8px;
                       overflow: auto">
-                    <div id="confirm" class=" status" style="padding: 0 8px;">
+                    <div id="choXacNhan" class=" status" style="padding: 0 8px;">
                         <table class="table table-bordered ">
                             <thead>
                             <tr>
@@ -155,7 +155,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {{#each confirm}}
+                            {{#each choXacNhan}}
                                 <tr>
                                     <td>{{@index}}</td>
                                     <td>{{this._id}}</td>
@@ -300,7 +300,7 @@
 
                         </table>
                     </div>
-                    <div id="pickup" class=" status" style="display:none ;padding: 0 8px;">
+                    <div id="choLayHang" class=" status" style="display:none ;padding: 0 8px;">
                         <table class="table table-bordered ">
                             <thead>
                             <tr>
@@ -314,7 +314,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {{#each pickup}}
+                            {{#each choLayHang}}
                                 <tr>
                                     <td>{{@index}}</td>
                                     <td>{{this._id}}</td>
@@ -455,7 +455,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div id="delivery" class=" status" style="display:none ;padding: 0 8px;">
+                    <div id="daHuy" class=" status" style="display:none ;padding: 0 8px;">
                         <table class="table table-bordered ">
                             <thead>
                             <tr>
@@ -468,7 +468,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {{#each delivery}}
+                            {{#each daHuy}}
                                 <tr>
                                     <td>{{@index}}</td>
                                     <td>{{this._id}}</td>
@@ -593,7 +593,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div id="delivered" class=" status" style="display:none ;padding: 0 8px;">
+                    <div id="choGiaoHang" class=" status" style="display:none ;padding: 0 8px;">
                         <table class="table table-bordered ">
                             <thead>
                             <tr>
@@ -607,7 +607,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {{#each delivered}}
+                            {{#each choGiaoHang}}
                                 <tr>
                                     <td>{{@index}}</td>
                                     <td>{{this._id}}</td>
@@ -748,7 +748,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div id="returns" class=" status" style="display:none ;padding: 0 8px;">
+                    <div id="daGiao" class=" status" style="display:none ;padding: 0 8px;">
                         <table class="table table-bordered ">
                             <thead>
                             <tr>
@@ -758,12 +758,11 @@
                                 <th style="text-align: center;width: 120px">Số lượng</th>
                                 <th style="text-align: center;width: 130px">Giá tiền</th>
                                 <th style="text-align: center;width: 100px">Chi tiết</th>
-                                <th style="text-align: center;width: 145px;">Thao tác</th>
 
                             </tr>
                             </thead>
                             <tbody>
-                            {{#each returns}}
+                            {{#each daGiao}}
                                 <tr>
                                     <td>{{@index}}</td>
                                     <td>{{this._id}}</td>
@@ -775,15 +774,7 @@
                                              data-toggle="modal"
                                              data-target="#detail{{this._id}}"/>
                                     </td>
-                                    <td>
-                                        <img width="50px" src="tick.png" class="btn btn-success btn-sm"
-                                             data-toggle="modal"
-                                             data-target="#succ{{this._id}}"/>
-                                        <img width="50px" src="close.png" class="btn btn-danger btn-sm"
-                                             data-toggle="modal"
-                                             data-target="#delete{{this._id}}"
-                                             data-product-name="Tên sản phẩm"/>
-                                    </td>
+
                                 </tr>
                                 <div class="modal fade" id="detail{{this._id}}" tabindex="-1" role="dialog"
                                      aria-labelledby="deleteProductModalLabel">
@@ -844,67 +835,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="modal fade" id="succ{{this._id}}" tabindex="-1" role="dialog"
-                                     aria-labelledby="addProductModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog" role="document">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="addProductModalLabel">Xác nhận đơn</h5>
-                                                <button type="button" class="close" data-dismiss="modal"
-                                                        aria-label="Close">
-                                                    <span aria-hidden="true">&times;</span>
-                                                </button>
-                                            </div>
-
-                                            <div class="modal-body">
-                                                <p>Bạn có chắc chắn muốn xác nhận đơn hàng của tài
-                                                    khoản: {{this.customer_email}}?</p>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                                                    Thoát
-                                                </button>
-                                                <form action="/order/status/Comfig/{{this._id}}" method="POST">
-                                                    <button type="submit" class="btn btn-primary">Xác nhận</button>
-                                                </form>
-                                            </div>
-
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="modal fade" id="delete{{this._id}}" tabindex="-1" role="dialog"
-                                     aria-labelledby="deleteProductModalLabel">
-                                    <div class="modal-dialog" role="document">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="deleteProductModalLabel">Huỷ đơn hàng</h5>
-                                                <button type="button" class="close" data-dismiss="modal"
-                                                        aria-label="Close">
-                                                    <span aria-hidden="true">&times;</span>
-                                                </button>
-                                            </div>
-                                            <div class="modal-body">
-                                                <p>Bạn có chắc chắn muốn hủy đơn hàng của tài
-                                                    khoản: {{this.customer_email}}?</p>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                                                    Thoát
-                                                </button>
-                                                <form action="/order/status/{{this._id}}" method="POST">
-                                                    <button type="submit" class="btn btn-danger">Xác nhận</button>
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
                             {{/each}}
                             </tbody>
                         </table>
                     </div>
-                    <div id="history" class=" status" style="display:none ;padding: 0 8px;">
+
+                    <div id="traHang" class=" status" style="display:none ;padding: 0 8px;">
                         <table class="table table-bordered ">
                             <thead>
                             <tr>
@@ -917,7 +853,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {{#each history}}
+                            {{#each traHang}}
                                 <tr>
                                     <td>{{@index}}</td>
                                     <td>{{this._id}}</td>
