update đơn hàng

--- a/Server/Views/screenHome.hbs
+++ b/Server/Views/screenHome.hbs
@@ -362,7 +362,7 @@
                                     <td>{{@index}}</td>
                                     <td>{{this._id}}</td>
                                     <td>{{this.customer_email}}</td>
-                                    <td>{{this.products.length}}</td>
+                                    <td>{{this.total_quantity}}</td>
                                     <td>{{formatCurrency this.total_amount}}</td>
                                     <td>
                                         <img width="50px" src="detail.png" class="btn btn-primary btn-sm"
@@ -526,7 +526,7 @@
                                     <td>{{@index}}</td>
                                     <td>{{this._id}}</td>
                                     <td>{{this.customer_email}}</td>
-                                    <td>{{this.products.length}}</td>
+                                    <td>{{this.total_quantity}}</td>
                                     <td>{{formatCurrency this.total_amount}}</td>
                                     <td>
                                         <img width="50px" src="detail.png" class="btn btn-primary btn-sm"
@@ -668,7 +668,7 @@
                                     <td>{{@index}}</td>
                                     <td>{{this._id}}</td>
                                     <td>{{this.customer_email}}</td>
-                                    <td>{{this.products.length}}</td>
+                                    <td>{{this.total_quantity}}</td>
                                     <td>{{formatCurrency this.total_amount}}</td>
                                     <td>
                                         <img width="50px" src="detail.png" class="btn btn-primary btn-sm"
@@ -824,7 +824,7 @@
                                     <td>{{@index}}</td>
                                     <td>{{this._id}}</td>
                                     <td>{{this.customer_email}}</td>
-                                    <td>{{this.products.length}}</td>
+                                    <td>{{this.total_quantity}}</td>
                                     <td>{{formatCurrency this.total_amount}}</td>
                                     <td>
                                         <img width="50px" src="detail.png" class="btn btn-primary btn-sm"
@@ -920,7 +920,7 @@
                                     <td>{{@index}}</td>
                                     <td>{{this._id}}</td>
                                     <td>{{this.customer_email}}</td>
-                                    <td>{{this.products.length}}</td>
+                                    <td>{{this.total_quantity}}</td>
                                     <td>{{formatCurrency this.total_amount}}</td>
                                     <td>
                                         <a href="#" class="btn btn-primary btn-sm" data-toggle="modal"
@@ -1048,7 +1048,7 @@
                                     <td>{{@index}}</td>
                                     <td>{{this._id}}</td>
                                     <td>{{this.customer_email}}</td>
-                                    <td>{{this.products.length}}</td>
+                                    <td>{{this.total_quantity}}</td>
                                     <td>{{formatCurrency this.total_amount}}</td>
                                     <td>
                                         <a href="#" class="btn btn-primary btn-sm" data-toggle="modal"
