update thống kê

--- a/Server/Views/screenHome.hbs
+++ b/Server/Views/screenHome.hbs
@@ -134,7 +134,7 @@
                                        onclick="openOrder('choXacNhan')">
                                    Chờ xác nhận
                                </button>
-                               <span id="totalChoXacNhan"  class="position-absolute translate-middle badge rounded-pill bg-danger" style="left: 125px;color: white">
+                               <span id="totalChoXacNhan"  class="position-absolute translate-middle badge rounded-pill bg-danger" style="color: white">
                                {{choXacNhan.length}}
                             </span>
                            </div>
@@ -142,7 +142,7 @@
                            <div style="margin: 0 10px;">
                               <button class="btn-cf" style=" padding: 0 8px;" onclick="openOrder('choLayHang')">Đang chuẩn bị hàng
                               </button>
-                              <span id="totalChoLayHang" class="position-absolute translate-middle badge rounded-pill bg-danger"  style="left: 299px;color: white" >
+                              <span id="totalChoLayHang" class="position-absolute translate-middle badge rounded-pill bg-danger"  style="color: white" >
                                   {{choLayHang.length}}
                             </span>
                           </div>
@@ -150,7 +150,7 @@
                            <div style="margin: 0 10px;">
                               <button class="btn-cf" style=" padding: 0 8px;" onclick="openOrder('choGiaoHang')">Chờ giao hàng
                               </button>
-                              <span id="totalChoGiaoHang" class="position-absolute translate-middle badge rounded-pill bg-danger"  style="left:439px;color: white">
+                              <span id="totalChoGiaoHang" class="position-absolute translate-middle badge rounded-pill bg-danger"  style="color: white">
                                   {{choGiaoHang.length}}
                             </span>
                           </div>
@@ -167,7 +167,7 @@
 
                            <div style="margin: 0 10px;">
                                <button class="btn-cf" style=" padding: 0 8px;" onclick="openOrder('traHang')">Trả hàng</button>
-                               <span id="totalTraHang" class="position-absolute translate-middle badge rounded-pill bg-danger"  style="right: 128px;color: white">
+                               <span id="totalTraHang" class="position-absolute translate-middle badge rounded-pill bg-danger"  style="color: white">
                                    {{traHang.length}}
                             </span>
                            </div>
