--- a/Server/Views/screenMessger.hbs
+++ b/Server/Views/screenMessger.hbs
@@ -123,7 +123,14 @@
         <div class=" bg-indigo-800">
             <div class=" text-xl text-gray-200 uppercase font-bold" style="padding: 33px;">Shop BipBip</div>
         </div>
-
+        <a href="/statistic" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none">
+            <div class="flex" style=" padding: 12px;">
+                <div>
+                    <img class="w-5 h-5" src="analytics.png" alt="">
+                </div>
+                <div class="mx-3 text-sm text-gray-100 ">Thống kê</div>
+            </div>
+        </a>
         <a href="/home" class=" cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none ">
             <div class="flex" style=" padding: 12px;">
                 <div>
