--- a/Server/Views/screenStatistics.hbs
+++ b/Server/Views/screenStatistics.hbs
@@ -125,38 +125,39 @@
       </div>
     </div>
     <!--Top navbar-->
-    <figure class="highcharts-figure">
-      <div id="container"></div>
-    </figure>
+    <div style="width: 1179px ;margin-left: 45px;">
+      <figure class="highcharts-figure">
+        <div id="container"></div>
+      </figure>
 
-    <div style="display: flex;align-items: center;
-    margin-left: 50px;">
-      <div>
-        Thống kê năm:
-      </div>
+      <div style="display: flex;align-items: center">
+        <div>
+          Thống kê năm:
+        </div>
 
-      <select id="dateYearSelect" name="dateYear" style="outline: none;
+        <select id="dateYearSelect" name="dateYear" style="outline: none;
     padding: 8px;
     border-radius: 8px;
     cursor: pointer;
     margin-left: 14px;">
-        <option>2020</option>
-        <option>2021</option>
-        <option>2022</option>
-        <option>2023</option>
-        <option>2024</option>
-        <option>2025</option>
-        <option>2026</option>
-        <option>2027</option>
-        <option>2028</option>
-        <option>2029</option>
-      </select>
+          <option>2020</option>
+          <option>2021</option>
+          <option>2022</option>
+          <option>2023</option>
+          <option>2024</option>
+          <option>2025</option>
+          <option>2026</option>
+          <option>2027</option>
+          <option>2028</option>
+          <option>2029</option>
+        </select>
+      </div>
+
+
+      <figure class="highcharts-figure">
+        <div id="container2"></div>
+      </figure>
     </div>
-
-
-    <figure class="highcharts-figure">
-      <div id="container2"></div>
-    </figure>
 
 
   </div>
