--- a/Server/Views/product_detail.hbs
+++ b/Server/Views/product_detail.hbs
@@ -192,63 +192,63 @@
                                         <div style="display: flex">
                                             <div class="form-group">
                                                 <label for="color_name">Size 26</label>
-                                                <input type="text" class="form-control" id="color_name" name="size_26"
+                                                <input type="number" class="form-control" id="color_name" min="0" name="size_26"
                                                        maxlength="3" value="{{this.dataSize.[0].size_quantity}}"
                                                        style="max-width: 80%"
                                                        required>
                                             </div>
                                             <div class="form-group">
                                                 <label for="color_name">Size 27</label>
-                                                <input type="text" class="form-control" id="color_name" name="size_27"
+                                                <input type="number" class="form-control" id="color_name" min="0" name="size_27"
                                                        maxlength="3" value="{{this.dataSize.[1].size_quantity}}"
                                                        style="max-width: 80%"
                                                        required>
                                             </div>
                                             <div class="form-group">
                                                 <label for="color_name">Size 28</label>
-                                                <input type="text" class="form-control" id="color_name" name="size_28"
+                                                <input type="number" class="form-control" id="color_name" min="0" name="size_28"
                                                        maxlength="3" value="{{this.dataSize.[2].size_quantity}}"
                                                        style="max-width: 80%"
                                                        required>
                                             </div>
                                             <div class="form-group">
                                                 <label for="color_name">Size 29</label>
-                                                <input type="text" class="form-control" id="color_name" name="size_29"
+                                                <input type="number" class="form-control" id="color_name" min="0" name="size_29"
                                                        maxlength="3" value="{{this.dataSize.[3].size_quantity}}"
                                                        style="max-width: 80%"
                                                        required>
                                             </div>
                                             <div class="form-group">
                                                 <label for="color_name">Size 34</label>
-                                                <input type="text" class="form-control" id="color_name" name="size_34"
+                                                <input type="number" class="form-control" id="color_name" min="0" name="size_34"
                                                        maxlength="3" value="{{this.dataSize.[4].size_quantity}}"
                                                        style="max-width: 80%"
                                                        required>
                                             </div>
                                             <div class="form-group">
                                                 <label for="color_name">Size 35</label>
-                                                <input type="text" class="form-control" id="color_name" name="size_35"
+                                                <input type="number" class="form-control" id="color_name" min="0" name="size_35"
                                                        maxlength="3" value="{{this.dataSize.[5].size_quantity}}"
                                                        style="max-width: 80%"
                                                        required>
                                             </div>
                                             <div class="form-group">
                                                 <label for="color_name">Size 36</label>
-                                                <input type="text" class="form-control" id="color_name" name="size_36"
+                                                <input type="number" class="form-control" id="color_name" min="0" name="size_36"
                                                        maxlength="3" value="{{this.dataSize.[6].size_quantity}}"
                                                        style="max-width: 80%"
                                                        required>
                                             </div>
                                             <div class="form-group">
                                                 <label for="color_name">Size 37</label>
-                                                <input type="text" class="form-control" id="color_name" name="size_37"
+                                                <input type="number" class="form-control" id="color_name" min="0" name="size_37"
                                                        maxlength="3" value="{{this.dataSize.[7].size_quantity}}"
                                                        style="max-width: 80%"
                                                        required>
                                             </div>
                                             <div class="form-group">
                                                 <label for="color_name">Size 38</label>
-                                                <input type="text" class="form-control" id="color_name" name="size_38"
+                                                <input type="number" class="form-control" id="color_name" min="0" name="size_38"
                                                        maxlength="3" value="{{this.dataSize.[8].size_quantity}}"
                                                        style="max-width: 80%"
                                                        required>
@@ -297,55 +297,55 @@
                                 <div style="display: flex">
                                     <div class="form-group">
                                         <label for="color_name">Size 26</label>
-                                        <input type="text" class="form-control" id="color_name" name="size_26"
+                                        <input type="number" class="form-control" id="color_name" min="0" name="size_26"
                                                maxlength="3" value="0" style="max-width: 80%"
                                                required>
                                     </div>
                                     <div class="form-group">
                                         <label for="color_name">Size 27</label>
-                                        <input type="text" class="form-control" id="color_name" name="size_27"
+                                        <input type="number" class="form-control" id="color_name" min="0" name="size_27"
                                                maxlength="3" value="0" style="max-width: 80%"
                                                required>
                                     </div>
                                     <div class="form-group">
                                         <label for="color_name">Size 28</label>
-                                        <input type="text" class="form-control" id="color_name" name="size_28"
+                                        <input type="number" class="form-control" id="color_name" min="0" name="size_28"
                                                maxlength="3" value="0" style="max-width: 80%"
                                                required>
                                     </div>
                                     <div class="form-group">
                                         <label for="color_name">Size 29</label>
-                                        <input type="text" class="form-control" id="color_name" name="size_29"
+                                        <input type="number" class="form-control" id="color_name" min="0" name="size_29"
                                                maxlength="3" value="0" style="max-width: 80%"
                                                required>
                                     </div>
                                     <div class="form-group">
                                         <label for="color_name">Size 34</label>
-                                        <input type="text" class="form-control" id="color_name" name="size_34"
+                                        <input type="number" class="form-control" id="color_name" min="0" name="size_34"
                                                maxlength="3" value="0" style="max-width: 80%"
                                                required>
                                     </div>
                                     <div class="form-group">
                                         <label for="color_name">Size 35</label>
-                                        <input type="text" class="form-control" id="color_name" name="size_35"
+                                        <input type="number" class="form-control" id="color_name" min="0" name="size_35"
                                                maxlength="3" value="0" style="max-width: 80%"
                                                required>
                                     </div>
                                     <div class="form-group">
                                         <label for="color_name">Size 36</label>
-                                        <input type="text" class="form-control" id="color_name" name="size_36"
+                                        <input type="number" class="form-control" id="color_name" min="0" name="size_36"
                                                maxlength="3" value="0" style="max-width: 80%"
                                                required>
                                     </div>
                                     <div class="form-group">
                                         <label for="color_name">Size 37</label>
-                                        <input type="text" class="form-control" id="color_name" name="size_37"
+                                        <input type="number" class="form-control" id="color_name" min="0" name="size_37"
                                                maxlength="3" value="0" style="max-width: 80%"
                                                required>
                                     </div>
                                     <div class="form-group">
                                         <label for="color_name">Size 38</label>
-                                        <input type="text" class="form-control" id="color_name" name="size_38"
+                                        <input type="number" class="form-control" id="color_name" min="0" name="size_38"
                                                maxlength="3" value="0" style="max-width: 80%"
                                                required>
                                     </div>
